package td1.refactor.api.general;

public interface Product {
    double weight();

    double price();
}
